== 16/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b90.zip V1.6-b90]

''' CBUS '''

Possible fix for CBUS startup issues.

== 14/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b89.zip V1.6-b89]

''' Jetty '''

Hack to get rid of firefox's 3.0's broken favicon.ico handling. 

== 13/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b88.zip V1.6-b88]   [attachment:wiki:SoftwareReleases:eLife-1.6b88-libs.zip Libs-V1.6b88] ==

'''Serial '''

Incorporated RXTX serial library back into system. Issue [ticket:744]

''' Web Client '''

Add further redirection instruction on logout to try to work with Firefox better. Ticket [ticket:742]

Ensure session is not incorrectly accessed if the service was not setup properly for some reason. Ticket [ticket:736]
 
Simplied session counting procedure.Tickedt [ticket:746]

''' CBUS '''

Ensure slider pulse does not cause threading issue on comms reconnect. Ticket [ticket:745]
 
== 31/Aug/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b87.zip V1.6-b87]
 
''' Jetty '''

Resolved startup and web push issue [ticket:732]

== 30/Aug/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b86.zip V1.6-b86]   [attachment:wiki:SoftwareReleases:eLife-1.6b86-libs.zip Libs-V1.6b86] ==

''' General '''

Release with correct manifest and libraries


== 26/Aug/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b85.zip V1.6-b85]   [attachment:wiki:SoftwareReleases:eLife-1.6b85-libs.zip Libs-V1.6b85] ==

''' Flash Client '''

Ensure cross domain file is sent when requested to support newer flash player versions. Resolves issue [ticket:731],[ticket:734],[ticket:731]

''' User Manager '''

Ensure user manager redirects correctly on authentication. Resolves issue [ticket:735]
To use their must be a subdirectory /UserManager created in the eLife website. Contents are index.html, login.html, login_fail.html. 
Examples have been checked into the Client_Build/web project.
