@@ -1,4 +1,4 @@
-#Tue Sep 16 19:03:19 EST 2008
+#Mon Dec 01 13:48:11 EST 2008
 major_version=1.6b
 minor_version=91
 app_name=eLife
