@@ -1,3 +1,9 @@
+== 1/Dec/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b91.zip V1.6-b91] [attachment:wiki:SoftwareReleases:eLife-1.6b91-libs.zip Libs-V1.6b91] ==
+
+''' Started '''
+
+Resolved issues with Macro and Sript list not being sent on client attatch if there had previously been a Script or Macro operation on the server.
+
 == 16/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b90.zip V1.6-b90]
 
 ''' CBUS '''
